--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,54 @@
-/* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons+Outlined");
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+
+@import "styles/color.scss";
+@import "styles/typography.scss";
+@import "styles/component.scss";
+@import "styles/layout.scss";
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background: rgb(235, 235, 235);
+  font-family: Inter, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 14px;
+}
+
+app-root {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  padding: 20px 0;
+  max-width: 640px;
+}
+
+a {
+  text-decoration: none;
+}
+
+.cursor {
+  &-pointer {
+    cursor: pointer;
+  }
+}
+
+@media screen and (min-width: 641px) {
+  .hide-desktop {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  app-root {
+    padding: 20px;
+  }
+
+  .hide-mobile {
+    display: none;
+  }
+}
